objects/LLC_BI__Id_Document_Type__c.object
<CustomObject>
    <description>The different types or forms of identification documentation available.</description>
    <fields>
        <fullName>LLC_BI__Agency__c</fullName>
        <description>This picklist field is manually populated when configuring ID Document Types. The picklist values are the names of the state or national agency which issued the identification (driver’s license, passport) presented to the financial institution by the natural person associated with the transaction. This data is used for the financial institution’s Customer Identification Program.</description>
        <label>Agency</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>DMV</fullName>
                </value>
                <value>
                    <fullName>Government</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__Id_Document_Requirement__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field is required and is automatically set when the Platform package is installed. This field identifies the ID document requirements for this identification document type.</description>
        <label>Id Document Requirement</label>
        <referenceTo>LLC_BI__Id_Document_Requirement__c</referenceTo>
        <relationshipLabel>Id Document Types</relationshipLabel>
        <relationshipName>Id_Document_Types</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Screen_Section__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>This field is optional and can be manually configured to display a field set while collecting ID documents during New Customer Onboarding. It indicates the screen section for the document type.</description>
        <label>Screen Section</label>
        <referenceTo>nFORCE__Screen_Section__c</referenceTo>
        <relationshipName>Identification_Document_Types</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <label>Id Document Type</label>
    <listViews>
        <fullName>LLC_BI__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Id Document Type Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Id Document Types</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>